fix overflow in <pre>

--- a/sass/default.scss
+++ b/sass/default.scss
@@ -42,6 +42,7 @@ pre {
     font-size: 14px;
     line-height: 1.3rem;
     padding: 10px 20px;
+    overflow: auto;
 }
 
 blockquote {
